--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "react-redux": "^7.2.1",
-    "react-scripts": "3.4.3"
+    "react-scripts": "3.4.3",
+    "spotify-web-api-js": "^1.5.0"
   },
   "scripts": {
     "start": "react-scripts start",
