--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-dom": "^16.14.0",
     "react-redux": "^7.2.1",
     "react-scripts": "3.4.3",
+    "react-spotify-player": "^1.0.4",
     "spotify-web-api-js": "^1.5.0"
   },
   "scripts": {
