--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "@testing-library/user-event": "^7.2.1",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
+    "react-load-script": "0.0.6",
     "react-redux": "^7.2.1",
     "react-scripts": "3.4.3",
     "react-spotify-player": "^1.0.4",
+    "react-spotify-web-playback": "^0.7.0",
     "spotify-web-api-js": "^1.5.0"
   },
   "scripts": {
